--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,13 @@ html {
 body {
   margin: 0;
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.75);
+}
